--- a/C13-Red-Black-Trees/13.1.md
+++ b/C13-Red-Black-Trees/13.1.md
@@ -56,7 +56,7 @@ The shortest simple path would be: 3 black nodes in line.
 
 The longest simple path would be: 3 black nodes + 3 red nodes. Every red node must have a black child, and we give every black node a red child to maximize the red children we have on the path. 
 
-In total, the lenght of the shortest possible path for black-height 2, is 3 nodes. The longest possible path is 6 nodes, which is twice, possibly less but never more, than the amount of nodes on the shortest simple path.
+In total, the length of the shortest possible path for black-height 2, is 3 nodes. The longest possible path is 6 nodes, which is twice, possibly less but never more, than the amount of nodes on the shortest simple path.
 
 ### Exercises 13.1-6
 ***
